[gd_scene load_steps=4 format=3 uid="uid://dk62uk00ha3h8"]

[ext_resource type="Script" path="res://scripts/falling_objects.gd" id="1_3rtky"]

[sub_resource type="GDScript" id="GDScript_p8hhm"]
script/source = "extends Timer


# Called when the node enters the scene tree for the first time.
func _ready() -> void:
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(_delta: float) -> void:
	pass
"

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pa5y4"]
size = Vector2(2949, 120)

[node name="FallingObjects" type="Node2D"]
script = ExtResource("1_3rtky")

[node name="SpawnerCD" type="Timer" parent="."]
wait_time = 3.0
autostart = true
script = SubResource("GDScript_p8hhm")

[node name="DeleteBorder" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DeleteBorder"]
position = Vector2(1351, 1288)
shape = SubResource("RectangleShape2D_pa5y4")

[connection signal="timeout" from="SpawnerCD" to="." method="_on_spawner_cd_timeout"]
[connection signal="area_entered" from="DeleteBorder" to="." method="_on_delete_border_area_entered"]
